force-app/main/default/objects/Krow__Time_Off_Split__c/Krow__Time_Off_Split__c.object-meta.xml
<CustomObject>
    <label>Time-Off Split</label>
    <nameField>
        <displayFormat>TOS-{0000}</displayFormat>
        <label>Time-Off Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time-Off Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>