force-app/main/default/objects/Krow__Time_Off_Split__c/fields/Krow__Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>