force-app/main/default/objects/Krow__Time_Off_Split__c/fields/Krow__Resource__c.field-meta.xml
<CustomField>
    <fullName>Krow__Resource__c</fullName>
    <formula>Krow__Time_Off__r.Krow__Project_Resource__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource</label>
    <type>Text</type>
</CustomField>