force-app/main/default/objects/Krow__Time_Off_Split__c/fields/Krow__Time_Off__c.field-meta.xml
<CustomField>
    <fullName>Krow__Time_Off__c</fullName>
    <label>Time Off</label>
    <referenceTo>Krow__Time_Off__c</referenceTo>
    <relationshipLabel>Time-Off Splits</relationshipLabel>
    <relationshipName>Time_Off_Splits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>